force-app/main/default/objects/Gear__c/Gear__c.object-meta.xml
<CustomObject>
    <label>ציוד</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ציוד</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>