force-app/main/default/objects/Gear__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>קטגוריה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ציוד אלקטרוני ולוויני</fullName>
            </value>
            <value>
                <fullName>לוגיסטיקה</fullName>
            </value>
            <value>
                <fullName>רפואה</fullName>
            </value>
            <value>
                <fullName>צלילה / מים זורמים</fullName>
            </value>
            <value>
                <fullName>טג&quot;ח</fullName>
            </value>
            <value>
                <fullName>רכש</fullName>
            </value>
            <value>
                <fullName>ציוד אישי למחלץ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>