force-app/main/default/objects/Gear__c/fields/Extra_Parts__c.field-meta.xml
<CustomField>
    <fullName>Extra_Parts__c</fullName>
    <label>חלקים נלווים</label>
    <length>255</length>
    <type>Text</type>
</CustomField>