force-app/main/default/objects/Gear__c/fields/IMEI_Number__c.field-meta.xml
<CustomField>
    <fullName>IMEI_Number__c</fullName>
    <label>IMEI Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>