force-app/main/default/objects/Gear__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>תיאור מוצר</label>
    <length>100</length>
    <type>Text</type>
</CustomField>