force-app/main/default/objects/Gear__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>סטטוס</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>במלאי</fullName>
            </value>
            <value>
                <fullName>בחילוץ</fullName>
            </value>
            <value>
                <fullName>השכרה</fullName>
            </value>
            <value>
                <fullName>אישי</fullName>
            </value>
            <value>
                <fullName>בתיקון</fullName>
            </value>
            <value>
                <fullName>לא תקין</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>