force-app/main/default/objects/Gear__c/fields/Works__c.field-meta.xml
<CustomField>
    <fullName>Works__c</fullName>
    <label>תקין</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>תקין</fullName>
            </value>
            <value>
                <fullName>לא תקין</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>